<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="50dp"
             android:layout_gravity="center"
              android:text="@string/escolhaCandidato"
    />
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/candidato"
            android:layout_gravity="center"
            android:checkedButton="@id/doria">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/doria"
                android:text="@string/doria" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lula"
                android:text="@string/lula" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/marina"
                android:text="@string/marina" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bolsonaro"
                android:text="@string/bolsonaro" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/branco"
                android:text="@string/branco" />

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nulo"
                android:text="@string/nulo" />

    </RadioGroup>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btn"
            android:layout_gravity="center"
            android:onClick="prosseguir"
            android:text="@string/prosseguir"
    />

</LinearLayout>