<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">


    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="50dp"
              android:layout_marginHorizontal="10dp"
              android:text="@string/idade"
    />
    <EditText
            android:id="@+id/idade"
            android:inputType="number"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:layout_marginHorizontal="10dp"
              android:text="@string/sexo"
    />

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sexo"
            android:layout_marginHorizontal="10dp"
            android:checkedButton="@id/masculino">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/masculino"
                android:text="@string/masculino"/>

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/feminino"
                android:text="@string/feminino"/>
    </RadioGroup>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:layout_marginHorizontal="10dp"
              android:text="@string/escolaridade"
    />

    <Spinner
            android:id="@+id/escolaridade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/escolaridades"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/casaPropria"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/casaPropria"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btn_finalizar"
            android:layout_gravity="center"
            android:onClick="finalizar"
            android:text="@string/finalizar"
    />

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btn_enviar"
            android:layout_gravity="center"
            android:onClick="send"
            android:text="@string/email"
    />

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/btn_voltar"
            android:layout_gravity="center"
            android:onClick="voltar"
            android:text="@string/voltar"
    />

</LinearLayout>